Adding client and customizing styles

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <nav>
         <a href="{{url_for('index')}}">Home</a>
         <a href="{{url_for('cars_bp.list_cars_route')}}">Cars</a>
-        <a href="{{url_for('clients')}}">Clients</a>
+        <a href="{{url_for('clients_bp.list_clients_route')}}">Clients</a>
     </nav>
 
     <div class="container">
