--- a/templates/cars/edit.html
+++ b/templates/cars/edit.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/cars.css') }}">
+{% endblock %}
+
 {% block content %}
 <section class="edit-car">
     <h1>Edit Car Details</h1>
@@ -26,7 +30,7 @@
 
             <div class="form-group">
                 <label for="year">Year</label>
-                <input id="year" type="number" name="year" min="1948" value="{{ car.year }}" required>
+                <input id="year" type="number" name="year" min="1948" max="2026" value="{{ car.year }}" required>
             </div>
 
             <div class="form-group">
@@ -65,7 +69,7 @@
             <div class="form-group">
                 <label for="owner_email">Email</label>
                 <input id="owner_email" type="email" name="owner_email"
-                       value="{{ car.owner.email }}" >
+                       value="{{ car.owner.email }}" required>
             </div>
         </fieldset>
 
