Fix add car form action

--- a/templates/cars/add.html
+++ b/templates/cars/add.html
@@ -8,7 +8,8 @@
 <section class="add-car">
     <h1>Add New Car</h1>
 
-    <form method="POST" action="{{ url_for('cars_bp.list_cars_route') }}" class="add-car-form">
+    <form method="POST" action="{{ url_for('cars_bp.add_car_route') }}" class="add-car-form">
+    <!--                            ^^^^ CHANGE THIS ^^^^                          -->
 
         <fieldset>
             <legend>Car Information</legend>
